--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ori.lukai.chat" >
-    <uses-sdk
-        android:minSdkVersion="15" />
+
+    <uses-sdk android:minSdkVersion="15" />
+
+
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme ="@style/AppTheme" >
+        android:theme="@style/AppTheme" >
         <activity
-            android:name=".MyActivity"
-            android:label="@string/app_name">
+
+            android:name=".LoginActivity"
+            android:label="@string/title_activity_login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,6 +28,11 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.ori.lukai.chat.MyActivity" />
+        </activity>
+        <activity
+            android:name=".MyActivity"
+            android:label="@string/app_name" >
+
         </activity>
     </application>
 
