--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,14 @@
 
     <uses-sdk android:minSdkVersion="15" />
 
-
+    <uses-permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
+        android:maxSdkVersion="18" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -12,7 +19,6 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" >
             <intent-filter>
@@ -23,8 +29,7 @@
         </activity>
         <activity
             android:name=".DisplayMessageActivity"
-            android:label="@string/title_activity_display_message"
-            android:parentActivityName=".MyActivity" >
+            android:label="@string/title_activity_display_message">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.ori.lukai.chat.MyActivity" />
@@ -32,7 +37,11 @@
         <activity
             android:name=".MyActivity"
             android:label="@string/app_name" >
+        </activity>
 
+        <activity
+            android:name=".RegisterActivity"
+            android:label="@string/title_activity_register" >
         </activity>
     </application>
 
